Updated the front end of update menu screen on the admin's side

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,8 @@
 
     <!-- FONT -->
 
+    <link href='https://fonts.googleapis.com/css?family=Sacramento:400' rel='stylesheet' type='text/css'>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
