--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,5 +24,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
+    <script type=”text/javascript” crossorigin=”anonymous” src=”https://securegw-stage.paytm.in/merchantpgpui/checkoutjs/merchants/.js” ></script>
+
   </body>
 </html>
